# open_gl_renderer

./: .gitignore  CMakeLists.txt  main.cpp
shaders/: triangle_frag.glsl  triangle_vert.glsl
src/: FlyCamera.cpp  FlyCamera.h  RenderInfo.cpp  RenderInfo.h  ShaderCompiler.cpp  ShaderCompiler.h  Utils.cpp  Utils.h  includes.h  main.cpp
src/headers/: FlyCamera.h  GeometryLoader.h  RenderInfo.h  ShaderCompiler.h  TextureLoader.h  includes.h
src/implementations/: FlyCamera.cpp  RenderInfo.cpp  ShaderCompiler.cpp  TextureLoader.cpp  Utils.cpp
